--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 url: http://archulate.github.io
 title: Archulate's Blog
-subtitle: test System maintence work blog
-author: Archulate
+subtitle:  System maintence work blog
+author: 李立夫
 simple_search: http://google.com/search
 description: 这是李立夫的系统运维技术博客，欢迎来访
 
@@ -50,7 +50,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides: [custom/asides/about.html, asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
